--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,9 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q1.xlsx filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q2.xlsx filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q3.xlsx filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q4.xlsx filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q5.xlsx filter=lfs diff=lfs merge=lfs -text
+GenAIEyeTrackingCleanedDataset/GenAI[[:space:]]Metrics[[:space:]]Q6.xlsx filter=lfs diff=lfs merge=lfs -text
