--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas
-plotly
-panel==1.4.1
-openpyxl
-imbalanced-learn
-scikit-learn
+panel>=1.3.0
+plotly>=5.17.0
+pandas>=2.0.0
+numpy>=1.24.0
+openpyxl>=3.1.0
+param>=1.13.0
+bokeh>=3.2.0
