--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-panel>=1.3.0
-plotly>=5.17.0
-pandas>=2.0.0
-numpy>=1.24.0
-openpyxl>=3.1.0
-param>=1.13.0
-bokeh>=3.2.0
+gradio==4.44.0
+pandas==2.0.3
+numpy==1.24.4
+plotly==5.17.0
+openpyxl==3.1.2
+scipy==1.11.4
