--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ numpy==1.24.4
 plotly==5.17.0
 openpyxl==3.1.2
 scipy==1.11.4
-imbalanced-learn==0.11.0 
+scikit-learn==1.2.2
+imbalanced-learn==0.11.0
