--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-gradio==4.44.0
-pandas==2.0.3
-numpy==1.24.4
-plotly==5.17.0
-openpyxl==3.1.2
-scikit-learn==1.2.2
+gradio==5.34.1 
 imbalanced-learn==0.11.0
+ipython==8.12.0 
+matplotlib==3.7.1
+numpy==1.24.4
+openpyxl==3.1.2
+pandas==2.0.3
+plotly==5.17.0
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.13.2
+pillow
+lightgbm
+xgboost
